<resources>
    <string name="app_name">Where is my stuff</string>
    <string name="id_name">ID</string>
    <string name="what">What</string>
    <string name="to_whom">To Whom</string>
    <string name="when">When</string>
    <string name="returned">Returned</string>
    <string name="ausstand_0">Ausstand: 0</string>
    <string name="show_all">Show all</string>
    <string name="what_question">What?</string>
    <string name="to_whom_ques">To Whom?</string>
    <string name="save">Save</string>
    <string name="returned_ques">Returned?</string>
    <string name="when_ques">When?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string-array
        name="money">
        <item>€</item>
        <item>EUR</item>
        <item>EURO</item>
        <item>eur</item>
        <item>euro</item>
    </string-array>
    <dimen name="id_width">8dp</dimen>
    <dimen name="padding">6dp</dimen>
</resources>
