<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/table_db"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="64dp"
        android:stretchColumns="0,1,2,3,4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <TableRow>

            <TextView
                android:id="@+id/id"
                android:layout_column="0"
                android:padding="6dip"
                android:width="@dimen/id_width"
                android:text="@string/id_name" />

            <TextView
                android:id="@+id/what"
                android:layout_column="1"
                android:padding="6dip"
                android:text="@string/what" />

            <TextView
                android:id="@+id/towhom"
                android:layout_column="2"
                android:padding="6dip"
                android:text="@string/to_whom" />

            <TextView
                android:id="@+id/when"
                android:layout_column="3"
                android:padding="6dip"
                android:text="@string/when" />

            <TextView
                android:id="@+id/closed"
                android:layout_column="4"
                android:padding="6dip"
                android:text="@string/returned" />




        </TableRow>


        <View
            android:layout_height="2dip"
            android:background="#FF909090" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/table_db_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:stretchColumns="0,1,2,3,4"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp">

            </TableLayout>

        </ScrollView>


    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:onClick="onButtonShowPopupWindowClick"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />
    <!--    android:layout_marginRight="24dp" -->

    <Switch
        android:id="@+id/sw_showAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="onSwitchChanged"
        android:text="@string/show_all"
        app:layout_constraintBottom_toTopOf="@+id/table_db"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--    android:layout_marginRight="32dp" -->

    <TextView
        android:id="@+id/tv_ausstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:text="@string/ausstand_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    android:layout_marginRight="20dp" -->

    <SearchView
        android:id = "@+id/search"
        android:layout_width="206dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/table_db"
        app:layout_constraintEnd_toStartOf="@+id/sw_showAll"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    <!--    android:layout_marginRight="32dp" -->


</androidx.constraintlayout.widget.ConstraintLayout>